binding_generator/firm_headers/libfirm/tv.h

/**
 * Rotation to left.
 *
 * @param a  the first tarval
 * @param b  the second tarval
 *
 * @return a \<\<L\>\> b or tarval_bad
 */
FIRM_API ir_tarval *tarval_rotl(ir_tarval *a, ir_tarval *b);
/**
 * Returns the carry flag of the last operation.
 */
FIRM_API int tarval_carry(void);
/**
 * This structure contains helper information to format the output
 * of a tarval of a mode.
 */
typedef struct tarval_mode_info {
	tv_output_mode mode_output;  /**< if != TVO_NATIVE select a special mode */
	const char *mode_prefix;     /**< if set, this prefix will be printed
	                                  before a value of this mode */
	const char *mode_suffix;     /**< if set, this suffix will be printed
	                                  after a value of this mode */
} tarval_mode_info;
/**
 * Specify the output options of one mode.
 *
 * This functions stores the mode info, so DO NOT DESTROY it.
 *
 * @param mode      a ir_mode that should be associated
 * @param modeinfo  the output format info
 *
 * @return zero on success.
 */
FIRM_API int set_tarval_mode_output_option(ir_mode *mode,
                                           const tarval_mode_info *modeinfo);
/**
 * Returns the output options of one mode.
 *
 * This functions returns the mode info of a given mode.
 *
 * @param mode      a ir_mode that should be associated
 *
 * @return the output option
 */
FIRM_API const tarval_mode_info *get_tarval_mode_output_option(ir_mode *mode);
/**
 * Returns Bit representation of a tarval value, as string of '0' and '1'
 *
 * @param tv   The tarval
 *
 * This function returns a printable bit representation of any value
 * stored as tarval. This representation is a null terminated C string.
 *
 * @return
 *   As usual in C a pointer to a char is returned. The length of the
 *   returned string if fixed, just read as many chars as the mode defines
 *   as size.
 *
 * @note
 *   The string is allocated using malloc() and is free()ed on the next call
 *   of this function.
 *   The string consists of the ASCII characters '0' and '1' and is
 *   null terminated
 *
 * @sa
 *    irmode.h for the definition of the ir_mode struct
 *    the size member of aforementioned struct
 */
FIRM_API char *get_tarval_bitpattern(ir_tarval *tv);
/**
 * Returns the bitpattern of the bytes_ofs byte.
 *
 * This function succeeds even if the mode of the tarval uses lesser bits
 * than requested, in that case the bitpattern is filled with zero bits.
 *
 * To query a 32bit value the following code can be used:
 *
 * val0 = tarval_sub_bits(tv, 0);  <- lowest bits
 * val1 = tarval_sub_bits(tv, 1);
 * val2 = tarval_sub_bits(tv, 2);
 * val3 = tarval_sub_bits(tv, 3);  <- highest bits
 *
 * Because this is the bit representation of the target machine, only the following
 * operations are legal on the result:
 *
 * - concatenation (endian dependence MUST be handled by the CALLER)
 * - bitwise logical operations to select/mask bits
 *
 * @param tv        the tarval
 * @param byte_ofs  the byte offset from lower to higher
 *
 * @note
 *   The result of this function is undefined if the mode is neither integer nor float.
 */
FIRM_API unsigned char get_tarval_sub_bits(ir_tarval *tv, unsigned byte_ofs);
/**
 * Returns non-zero if a given (integer) tarval has only one single bit
 * set.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_is_single_bit(ir_tarval *tv);
/**
 * Return the number of set bits in a given (integer) tarval.
 *
 * @param tv    the tarval
 *
 * @return number of set bits or -1 on error
 */
FIRM_API int get_tarval_popcount(ir_tarval *tv);
/**
 * Return the number of the lowest set bit in a given (integer) tarval.
 *
 * @param tv    the tarval
 *
 * @return number of lowest set bit or -1 on error
 */
FIRM_API int get_tarval_lowest_bit(ir_tarval *tv);
/**
 * Output a tarval to a string buffer.
 *
 * @param buf     the output buffer
 * @param buflen  the length of the buffer
 * @param tv      the tarval
 */
FIRM_API int tarval_snprintf(char *buf, size_t buflen, ir_tarval *tv);
/**
 * Output a tarval to stdio.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_printf(ir_tarval *tv);
/**
 * Returns non-zero if the mantissa of a floating point IEEE-754
 * tarval is zero (i.e. 1.0Exxx)
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_ieee754_zero_mantissa(ir_tarval *tv);
/**
 * Returns the exponent of a floating point IEEE-754
 * tarval.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_ieee754_get_exponent(ir_tarval *tv);
/**
 * Check if the tarval can be converted to the given mode without
 * precision loss.
 *
 * @param tv    the tarval
 * @param mode  the mode to convert to
 */
FIRM_API int tarval_ieee754_can_conv_lossless(ir_tarval *tv, ir_mode *mode);
/**
 * Set the immediate precision for IEEE-754 results. Set this to
 * 0 to get the same precision as the operands.
 * For x87 compatibility, set this to 80.
 *
 * @return the old setting
 */
FIRM_API unsigned tarval_ieee754_set_immediate_precision(unsigned bits);
/**
 *  Returns non-zero if the result of the last IEEE-754 operation was exact.
 */
FIRM_API unsigned tarval_ieee754_get_exact(void);
/**
 * Return the size of the mantissa in bits (including possible
 * implicit bits) for the given mode.
 */
FIRM_API unsigned tarval_ieee754_get_mantissa_size(const ir_mode *mode);
/**
 * Enable/Disable floating point constant folding.
 */
FIRM_API void tarval_enable_fp_ops(int enable);
/** returns 0/1 if floating point folding is enable/disabled */
FIRM_API int tarval_fp_ops_enabled(void);
/**
 * Check if its the a floating point NaN.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_is_NaN(ir_tarval *tv);
/**
 * Check if its the a floating point +inf.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_is_plus_inf(ir_tarval *tv);
/**
 * Check if its the a floating point -inf.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_is_minus_inf(ir_tarval *tv);
/**
 * Check if the tarval represents a finite value, ie neither NaN nor inf.
 *
 * @param tv    the tarval
 */
FIRM_API int tarval_is_finite(ir_tarval *tv);
/**
 *   Checks whether a pointer points to a tarval.
 *
 *   @param thing     an arbitrary pointer
 *
 *   @return
 *       true if the thing is a tarval, else false
 */
FIRM_API int is_tarval(const void *thing);