src/firm/bindings/binding_tv.java


	public static native Pointer tarval_rotl(Pointer a, Pointer b);

	public static native int tarval_carry();

	public static native int set_tarval_mode_output_option(Pointer mode, Pointer modeinfo);

	public static native Pointer get_tarval_mode_output_option(Pointer mode);

	public static native String get_tarval_bitpattern(Pointer tv);

	public static native byte get_tarval_sub_bits(Pointer tv, int byte_ofs);

	public static native int tarval_is_single_bit(Pointer tv);

	public static native int get_tarval_popcount(Pointer tv);

	public static native int get_tarval_lowest_bit(Pointer tv);

	public static native int tarval_snprintf(String buf, com.sun.jna.NativeLong buflen, Pointer tv);

	public static native int tarval_printf(Pointer tv);

	public static native int tarval_ieee754_zero_mantissa(Pointer tv);

	public static native int tarval_ieee754_get_exponent(Pointer tv);

	public static native int tarval_ieee754_can_conv_lossless(Pointer tv, Pointer mode);

	public static native int tarval_ieee754_set_immediate_precision(int bits);

	public static native int tarval_ieee754_get_exact();

	public static native int tarval_ieee754_get_mantissa_size(Pointer mode);

	public static native void tarval_enable_fp_ops(int enable);

	public static native int tarval_fp_ops_enabled();

	public static native int tarval_is_NaN(Pointer tv);

	public static native int tarval_is_plus_inf(Pointer tv);

	public static native int tarval_is_minus_inf(Pointer tv);

	public static native int tarval_is_finite(Pointer tv);

	public static native int is_tarval(Pointer thing);
}
